# LanDrop

./: .gitignore  README.md  dev.bat  index.html  main.py  package-lock.json  package.json  tauri-v2-reference.md  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
backend/: croc_api.py  lan_server.py  updater.py  version.py
documentation/: ANDROID file  save picutre preview.md  lan-file-sharing.md
frontend/src/: App.svelte
frontend/src/features/contacts/: ContactBar.svelte
frontend/src/features/send/: DropZone.svelte  FileList.svelte
frontend/src/features/settings/: SettingsPage.svelte
frontend/src/features/transfer/: ActivityLog.svelte  TransferPage.svelte  UnifiedSendArea.svelte
frontend/src/lib/api/: bridge.ts
frontend/src/lib/state/: app-state.svelte.ts
frontend/src/lib/ui/: Snackbar.svelte
frontend/src/lib/utils/: file-utils.ts
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/keys/: landrop.key.pub
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/lan/: discovery.rs  identity.rs  mod.rs  protocol.rs  transfer.rs
src/features/peers/: DeviceSettingsDialog.svelte  PeerAvatar.svelte  PeerBar.svelte  PeerChip.svelte  PeerDialog.svelte
src/features/settings/: SettingsPage.svelte
src/features/transfer/: ChatArea.svelte  Composer.svelte  Lightbox.svelte  MessageBubble.svelte  TransferPage.svelte
src/lib/api/: bridge.ts
src/lib/state/: app-state.svelte.ts
src/lib/theme/: apply-theme.ts  m3-color.ts  m3-tokens.ts  theme-store.svelte.ts
src/lib/ui/: Button.svelte  Card.svelte  Dialog.svelte  Divider.svelte  Icon.svelte  IconButton.svelte  Select.svelte  Snackbar.svelte  Switch.svelte  TextField.svelte
src/lib/utils/: file-utils.ts
